--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
+<app-mostrar-mensaje></app-mostrar-mensaje>
 
-<div class="container">
-<p class="text-warning">Listado de producto</p>
-<app-producto></app-producto>
-</div>
