--- a/src/app/listado-productos/producto/producto.component.html
+++ b/src/app/listado-productos/producto/producto.component.html
@@ -1,5 +1,27 @@
-<div>  
-    <p>Descripcion: {{Descripcion}}, Precio: ${{Precio}}</p>
-    <p>Descripcion: {{Descripcion}}, Precio: ${{Precio}}</p>
-    <p>Descripcion: {{Descripcion}}, Precio: ${{Precio}}</p>
+<div class="card mx-auto mt-4 p-4 shadow bg-dark text-light" style="max-width: 700px;"> 
+    <h1 class="text-info text-center mt-5">Tienda Online</h1>
+
+    <h2 class="text-warning fw-bold mt-3 text-center mt-6">Listado de Productos</h2>
+
+    <div class="card p-3 mt-3 w-50 mx-auto bg-secondary rounded">
+        <div *ngFor="let producto of productos" class="border-bottom py-2 fs-5 text-light">
+            {{ producto.descripcion }}, ${{ producto.precio }}
+        </div>
+    </div>
+
+    <h3 class="text-success fw-bold mt-4 text-center mt-7">Agregar Nuevo Producto</h3>
+
+    <form [formGroup]="productoForm" (ngSubmit)="agregarProducto()" class="w-100 mt-3 p-3 rounded bg-dark text-light">
+        <div class="row justify-content-center">
+            <div class="col-md-4">
+                <input type="text" formControlName="descripcion" placeholder="Descripción Producto" class="form-control bg-secondary text-light border-0">
+            </div>
+            <div class="col-md-3">
+                <input type="number" formControlName="precio" placeholder="Precio" class="form-control bg-secondary text-light border-0">
+            </div>
+            <div class="col-md-auto">
+                <button type="submit" class="btn btn-primary" [disabled]="productoForm.invalid">Agregar</button>
+            </div>
+        </div>
+    </form>
 </div>
